--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
      </div>
     </div>
     <div class="clearfix colelem" id="u566-4"><!-- content -->
-     <p>#include_cs gallery</p>
+     <p>#include < cs > gallery</p>
     </div>
     <div class="clearfix colelem" id="u214-4"><!-- content -->
      <p>This group is a non&#45;formal team of Computer Science students of FEU Institute of Technology. The members have been together since the first year of college and became close friends in the midst of stressing about a programming subject. Please don't take this website to seriously, as the three of us do in real life.</p>
@@ -153,7 +153,7 @@
 
 </div>
     <div class="clearfix colelem" id="u177-4"><!-- content -->
-     <p>#include_cs Copyright || 2016 May</p>
+     <p>#include < cs > Copyright || 2016 May</p>
     </div>
    </div>
   </div>
