--- a/find-us.html
+++ b/find-us.html
@@ -62,10 +62,10 @@
      </div>
     </div>
     <div class="clearfix colelem" id="u568-4"><!-- content -->
-     <p>#include_cs</p>
+     <p>#include < cs ></p>
     </div>
     <div class="clearfix colelem" id="pu579-4"><!-- group -->
-     <a class="nonblock nontext clearfix grpelem" id="u579-4" href="https://www.facebook.com/profile.php?id=100011393831560" target="_blank" title="https://www.facebook.com/profile.php?id=100011393831560"><!-- content --><p>https://www.facebook.com/profile.php?id=100011393831560</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u579-4" href="https://www.facebook.com/profile.php?id=100011393831560" target="_blank" title="https://www.facebook.com/profile.php?id=100011393831560"><!-- content --><p>Contact Chii via Facebook</p></a>
      <a class="anchor_item grpelem" id="facebook"></a>
      <div class="clip_frame grpelem" id="u581"><!-- image -->
       <img class="block" id="u581_img" src="images/images2.jpg" alt="" width="33" height="33"/>
@@ -73,12 +73,12 @@
      <div class="clip_frame grpelem" id="u572"><!-- image -->
       <img class="block" id="u572_img" src="images/bot%c3%b3n_me_gustasvg.png" alt="" width="32" height="27"/>
      </div>
-     <a class="nonblock nontext clearfix grpelem" id="u587-4" href="https://accounts.google.com/ServiceLogin?service=mail&amp;passive=true&amp;rm=false&amp;continue=https://mail.google.com/mail/&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1"><!-- content --><p>carissalalainchii@gmail.com</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u587-4" href="https://accounts.google.com/ServiceLogin?service=mail&amp;passive=true&amp;rm=false&amp;continue=https://mail.google.com/mail/&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1"><!-- content --><p>Email Chii</p></a>
      <a class="anchor_item grpelem" id="email"></a>
      <div class="clip_frame grpelem" id="u606"><!-- image -->
       <img class="block" id="u606_img" src="images/twitter_logo_blue.png" alt="" width="25" height="20"/>
      </div>
-     <a class="nonblock nontext clearfix grpelem" id="u1326-4" href="https://twitter.com/tenshimechii"><!-- content --><p>https://twitter.com/tenshimechii</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u1326-4" href="https://twitter.com/tenshimechii"><!-- content --><p>Tweet Chii</p></a>
      <a class="anchor_item grpelem" id="untitled5"></a>
     </div>
     <div class="clearfix colelem" id="u569-3"><!-- content -->
@@ -91,14 +91,14 @@
      <div class="clip_frame grpelem" id="u592"><!-- image -->
       <img class="block" id="u592_img" src="images/bot%c3%b3n_me_gustasvg.png" alt="" width="32" height="27"/>
      </div>
-     <a class="nonblock nontext clearfix grpelem" id="u601-4" href="https://www.facebook.com/jusaya" target="_blank" title="https://www.facebook.com/profile.php?id=100011393831560"><!-- content --><p>&nbsp;https://www.facebook.com/jusaya</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u601-4" href="https://www.facebook.com/jusaya" target="_blank" title="https://www.facebook.com/profile.php?id=100011393831560"><!-- content --><p>&nbsp;Send EJ a message via FB</p></a>
      <a class="anchor_item grpelem" id="facebook2"></a>
      <div class="clip_frame grpelem" id="u612"><!-- image -->
       <img class="block" id="u612_img" src="images/twitter_logo_blue.png" alt="" width="25" height="20"/>
      </div>
-     <a class="nonblock nontext clearfix grpelem" id="u1319-4" href="https://twitter.com/josiahaquino"><!-- content --><p>&nbsp;https://twitter.com/josiahaquino</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u1319-4" href="https://twitter.com/josiahaquino"><!-- content --><p>&nbsp;Hashtag EJ in a Tweet</p></a>
      <a class="anchor_item grpelem" id="untitled"></a>
-     <a class="nonblock nontext clearfix grpelem" id="u1322-4" href="https://accounts.google.com/ServiceLogin?service=mail&amp;passive=true&amp;rm=false&amp;continue=https://mail.google.com/mail/&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1#identifier"><!-- content --><p><span id="u1322">josiah18aquino@gamil.com</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u1322-4" href="https://accounts.google.com/ServiceLogin?service=mail&amp;passive=true&amp;rm=false&amp;continue=https://mail.google.com/mail/&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1#identifier"><!-- content --><p><span id="u1322">Send a mail to EJ</span></p></a>
      <a class="anchor_item grpelem" id="untitled4"></a>
     </div>
     <div class="clearfix colelem" id="pu598"><!-- group -->
@@ -108,16 +108,16 @@
      <div class="clip_frame grpelem" id="u595"><!-- image -->
       <img class="block" id="u595_img" src="images/bot%c3%b3n_me_gustasvg.png" alt="" width="32" height="27"/>
      </div>
-     <a class="nonblock nontext clearfix grpelem" id="u603-4" href="https://www.facebook.com/neib07perez" target="_blank" title="https://www.facebook.com/profile.php?id=100011393831560"><!-- content --><p>https://www.facebook.com/bienperezzz</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u603-4" href="https://www.facebook.com/neib07perez" target="_blank" title="https://www.facebook.com/profile.php?id=100011393831560"><!-- content --><p>Like Bien</p></a>
      <a class="anchor_item grpelem" id="facebook3"></a>
      <div class="clip_frame grpelem" id="u615"><!-- image -->
       <img class="block" id="u615_img" src="images/twitter_logo_blue.png" alt="" width="25" height="20"/>
      </div>
      <div class="clearfix grpelem" id="pu1318-4"><!-- column -->
-      <a class="nonblock nontext clearfix colelem" id="u1318-4" href="https://twitter.com/ByenPrz"><!-- content --><p>https://twitter.com/ByenPrz</p></a>
+      <a class="nonblock nontext clearfix colelem" id="u1318-4" href="https://twitter.com/ByenPrz"><!-- content --><p>Tweet on Bien</p></a>
       <a class="anchor_item colelem" id="untitled2"></a>
      </div>
-     <a class="nonblock nontext clearfix grpelem" id="u1323-4" href="https://accounts.google.com/ServiceLogin?service=mail&amp;passive=true&amp;rm=false&amp;continue=https://mail.google.com/mail/&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1#identifier"><!-- content --><p><span id="u1323">beynprz@gmail.com</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u1323-4" href="https://accounts.google.com/ServiceLogin?service=mail&amp;passive=true&amp;rm=false&amp;continue=https://mail.google.com/mail/&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1#identifier"><!-- content --><p><span id="u1323">Send Bien a message</span></p></a>
      <a class="anchor_item grpelem" id="untitled3"></a>
     </div>
     <div class="verticalspacer"></div>
@@ -127,7 +127,7 @@
 
 </div>
     <div class="clearfix colelem" id="u177-4"><!-- content -->
-     <p>#include_cs Copyright || 2016 May</p>
+     <p>#include < cs > Copyright || 2016 May</p>
     </div>
    </div>
   </div>
